[gd_scene load_steps=21 format=2]

[ext_resource path="res://Images/player/player_stop.png" type="Texture" id=1]
[ext_resource path="res://Images/player/player_walk_2.png" type="Texture" id=2]
[ext_resource path="res://Images/player/player_jump.png" type="Texture" id=3]
[ext_resource path="res://Images/player/oyuncu.gd" type="Script" id=4]
[ext_resource path="res://Images/player/player_walk_1.png" type="Texture" id=5]
[ext_resource path="res://Images/player/player_jetpack.png" type="Texture" id=6]
[ext_resource path="res://Images/player/Climb2.png" type="Texture" id=7]
[ext_resource path="res://Images/player/climb3.png" type="Texture" id=8]
[ext_resource path="res://Images/player/Climb1.png" type="Texture" id=9]
[ext_resource path="res://Images/tile/tile132.png" type="Texture" id=10]
[ext_resource path="res://Images/tile/tile130.png" type="Texture" id=11]
[ext_resource path="res://Images/tile/tile131.png" type="Texture" id=12]
[ext_resource path="res://Images/tile/tile129.png" type="Texture" id=13]
[ext_resource path="res://sounds/yurume.wav" type="AudioStream" id=14]
[ext_resource path="res://sounds/ziplama.wav" type="AudioStream" id=15]
[ext_resource path="res://sounds/dusmesesi.wav" type="AudioStream" id=16]
[ext_resource path="res://sounds/jactpack kalkarken.wav" type="AudioStream" id=17]
[ext_resource path="res://sounds/jactpack ucarken.wav" type="AudioStream" id=18]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.61276, 15.8417 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "stop",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 10 ) ],
"loop": false,
"name": "dead",
"speed": 7.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "climb",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "jetpack",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 2 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 4 )
height = 17

[node name="Area2D" type="Area2D" parent="."]

[node name="AreaCollision" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "stop"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_right = 999999
limit_bottom = 420
limit_smoothed = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 14.9153, -6.71752 )
__meta__ = {
"_gizmo_extents_": 3.0
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="WalkSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )

[node name="FallSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )

[node name="JetpackSound1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 17 )

[node name="JetpackSound2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 18 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="finished" from="JumpSound" to="." method="_on_JumpSound_finished"]
